--- a/src/UI_Elements.scss
+++ b/src/UI_Elements.scss
@@ -2,7 +2,7 @@ $font-stack: "Segoe UI", Helvetica, sans-serif;
 
 $card-padding: 10px;  /*use padding so .card is exposed for drag & drop*/
 $card-border-width: 1px;
-$header-height: 50px;
+$header-height: 40px;
 $actions-menu-width: 44px;
 
 /*colors*/
